# RegressionPipeliner

./: .gitignore  README.md  basic_methods.py  pyproject.toml  requirements.txt
AbbotKinaseKi/: ChEMBL_Navigating_the_Kinome_Ki.csv  dataset.smi  make_model.py  rdkit_desc_table_results.csv  rdkit_ecfp_table_results.csv  run.x
KinaseChemoGenomicSet/: analyze_by_kinase_and_method.py  make_model.py  rdkit_desc_table_results.csv  rdkit_ecfp_table_results.csv  run.x
KinaseChemoGenomicSet.back/: AAK1.json  ABL1-nonphosphorylated.json  ABL1-phosphorylated.json  ABL2.json  ACVR1.json  ACVR2A.json  ACVR2B.json  ACVRL1.json  ADCK3.json  ADCK4.json  AKT2.json  AKT3.json  AMPK-alpha2.json  ANKK1.json  ASK1.json  AURKB.json  BIKE.json  BMPR1A.json  BMPR2.json  BRAF.json  BRK.json  BRSK1.json  BTK.json  BUB1.json  CAMK1.json  CAMK1B.json  CAMK4.json  CAMKK1.json  CAMKK2.json  CASK.json  CDC2L2.json  CDK4-cyclinD1.json  CDK4-cyclinD3.json  CDK4.json  CDK7.json  CDK8.json  CDK9.json  CDKL2.json  CDKL3.json  CHEK2.json  (+112 more)
LogP/: Readme.md  dataset.clean.smi  dataset.desc.purged.json  dataset.manual.desc.purged.fragfp.json  dataset.manual.smi  emissions.csv  run.fragfp.x  sampl7.csv  sampl7.desc.manual.purged.csv  sampl7.desc.manual.purged.fragfp.csv  sampl7.fragfp.csv  sampl7.smi  target.manual.csv
MeltingPoint/: dataset.rdkit_descriptors.json  dataset.rdkit_morgan_ecfp.json  make_model_runtime.py  run.x
NIR_Gasoline/: gasoline.csv  gasoline.json  make_model.py  make_model_runtime.py  run.x  runtime.csv
NIR_Mango/: NAnderson2020MendeleyMangoNIRData.SNV.Deriv.SG.json  README.md  (+3 more)
(+3542 files in other folders)
